# Nari

./: .containerignore  .dockerignore  .env  .gitignore  API_INTEGRATION.md  AUDIO_PROMPT_EXPLANATION.md  CLAUDE.md  Containerfile  Dia_1.6_colab.ipynb  Dia_TTS.ipynb  Dockerfile.app  Dockerfile.cli  GEMINI.md  README.md  SECURITY.md  api.py  app.py  benchmark.py  chatterbox_streaming.py  cli.py  config.json  dia_modal_stub.py  docker-compose.yml  example.py  fastapi_server.py  hf.py  parler_streaming.py  pyproject.toml  requirements.txt  start_server.py  test_streaming.py
.claude/: settings.local.json
.github/workflows/: ci.yaml
RDP-Colab/: RDP Colab.ipynb
dia/: config.py  inference.py  layers.py  model.py  state.py
example/: benchmark.py  fastapi_example.py  simple-cpu.py  simple-mac.py  simple-streaming.py  simple.py  test_streaming.py  voice_clone.py
nari_tts/: audio.py  config.py  inference.py  model.py
nb/: Orpheus_(3B)-TTS-original.ipynb  Orpheus_(3B)-TTS.ipynb
src/: app.py  config.py  dac_utils.py  inference.py  model.py
